syntax = "proto3";

option java_multiple_files = false;

option java_package = "org.iproute.grpc.api";

option java_outer_classname = "ExchangeProto";

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string result = 1;
}

service HelloService{
  rpc sayHello(HelloRequest) returns (HelloResponse);
}